src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithSmallIcon/ValidWithSmallIcon.php
<?php

namespace Valid\WithSmallIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithSmallIcon extends PluginBundle
{
}